<resources>
    <string name="app_name">AndroidAuthentication</string>
    <string name="auth_failed">ERROR</string>
    <string name="SinOut">Cerrar Sesion</string>
    <string name="Configuracion">Configuración</string>
    <string name="Name">Nombre</string>
    <string name="Lastmame">Apellido</string>
    <string name="Email">Correo</string>
    <string name="Password">Contraseña</string>
    <string name="Repassword">Repita Contraseña</string>
    <string name="title_activity_map">AppMap</string>
    <string name="appmap">AppMap</string>
    <string name="Ir">Ir...</string>
    <string name="distancia">Distancia: </string>
    <string name="Nombre">Nombre:</string>
    <string name="Precio">Precio:</string>
    <string name="Calificacion">Calificación</string>
    <string name="menuitem1">Claro</string>
    <string name="menuitem2">Oscuro</string>
</resources>
