<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roundcorner"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="112dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="4dp"
                android:layout_weight="20"
                android:text="@string/Nombre"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Nombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="4dp"
                android:layout_weight="80"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="#000"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="116dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="4dp"
                android:layout_weight="20"
                android:text="@string/Precio"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Ubicacion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="4dp"
                android:layout_weight="70"
                android:ellipsize="end"
                android:maxLines="10"
                android:textColor="#000"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="129dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="4dp"
                android:layout_weight="30"
                android:text="@string/Calificacion"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Calificacion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="4dp"
                android:layout_weight="70"
                android:textColor="#000" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>